ingress/banana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana
  labels:
    app: banana
    version: v1
    pipeline: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banana
  template:
    metadata:
      labels:
        app: banana
        version: v1
        pipeline: test
    spec:
      containers:
      - name: banana
        image: hashicorp/http-echo
        args:
          - "-text=banana"
        ports:
        - containerPort: 5678


---

kind: Service
apiVersion: v1
metadata:
  name: banana-service
spec:
  selector:
    app: banana
  ports:
    - port: 5678 # Default port for image
